chore: reduced log level from WARNING to FINE in LSM Tree compaction
(cherry picked from commit adb652b43b24ef855cdff6efbe6ff5fab81ed0d6)